--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My First GitHub Pages Document </title>
+    <title>Georgia 2021 Core Interaction </title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1> Hello World </h1>
+    <h1> Georgia's Website </h1>
     <p> This is my page on GitHub </p>
   </body>
 </html>
