--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>Little Red Riding Hood</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <h1>Little Red Riding Hood</h1>
     <h2>By Charles Perrault</h2>
 </head>
