--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1> Georgia's Website </h1>
     <p> This is my page on GitHub </p>
-    <a href="project1.html"> Project 1 </a>
+    <a href="project1.html"> Project 1 </a> <br> </br>
   </body>
 </html>
