--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1> Georgia's Website </h1>
     <p> This is my page on GitHub </p>
-    <a href="project1.html"> Project 1 </a> <br> </br>
   </body>
+  <a href="project1.html"> Project 1 </a> <br> </br>
+  <a href="project2/homepage.html"> Project 2 draft </a>
 </html>
