--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <p> This is my page on GitHub </p>
   </body>
   <a href="project1.html"> Project 1 </a> <br> </br>
-  <a href="project2/homepage.html"> Project 2 draft </a>
+  <a href="project2/index.html"> Project 2 draft </a>
 </html>
