--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <h1> Georgia's Website </h1>
     <p> This is my page on GitHub </p>
+    <a href="project1.html"> Project 1 </a> <br> </br>
+    <a href="project2/homepage.html"> Project 2 draft </a>
   </body>
-  <a href="project1.html"> Project 1 </a> <br> </br>
-  <a href="project2/index.html"> Project 2 draft </a>
+
+
 </html>
