--- a/Project2/index.html
+++ b/Project2/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <audio src="music.mp3" autoplay>
-    <p>If you are reading this, it is because your browser does not support the audio element.     </p>
-    <embed src="music.mp3" width="180" height="90" hidden="true" />
-    </audio>
+    <audio id="myAudio">
+    <source src="music.mp3" type="audio/mpeg">
+  </audio>
+
+  <button onclick="playAudio()" type="button">Play Audio</button>
+  <button onclick="pauseAudio()" type="button">Pause Audio</button>
+
     <div class="sentence1"> In 1978 I released the first record which described itself as Ambient Music,
      a name I invented to describe an emerging musical style </div>
     <div class="sentence2"> It happened like this. </div>
@@ -107,7 +110,17 @@
     <div class="sentence80"> who’ve first enjoyed and encouraged this work.) </div>
     <div class="sentence81"> In late 1977 I was waiting for a plane in Cologne airport .</div>
 
+    <script>
+    var x = document.getElementById("myAudio");
 
+    function playAudio() {
+      x.play();
+    }
+
+    function pauseAudio() {
+      x.pause();
+    }
+    </script>
 
 
   </body>
