--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1> Georgia's Website </h1>
     <p> This is my page on GitHub </p>
     <a href="project1.html"> Project 1 </a> <br> </br>
-    <a href="homepage.html"> Project 2 draft </a>
+    <a href="project2/homepage.html"> Project 2 draft </a>
   </body>
 
 
