--- a/Project2/index.html
+++ b/Project2/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <audio id="myAudio">
+  <!--  <audio id="myAudio">
     <source src="music.mp3" type="audio/mpeg">
   </audio>
 
   <button onclick="playAudio()" type="button">Play Audio</button>
-  <button onclick="pauseAudio()" type="button">Pause Audio</button>
+  <button onclick="pauseAudio()" type="button">Pause Audio</button> -->
+
+       <embed name="GoodEnough" src="music.mp3" loop="false" hidden="true" autostart="true">
 
     <div class="sentence1"> In 1978 I released the first record which described itself as Ambient Music,
      a name I invented to describe an emerging musical style </div>
@@ -110,7 +112,7 @@
     <div class="sentence80"> who’ve first enjoyed and encouraged this work.) </div>
     <div class="sentence81"> In late 1977 I was waiting for a plane in Cologne airport .</div>
 
-    <script>
+  <!--  <script>
     var x = document.getElementById("myAudio");
 
     function playAudio() {
@@ -120,7 +122,7 @@
     function pauseAudio() {
       x.pause();
     }
-    </script>
+  </script> -->
 
 
   </body>
