--- a/Project2/index.html
+++ b/Project2/index.html
@@ -14,6 +14,7 @@
   <button onclick="pauseAudio()" type="button">Pause Audio</button> -->
 
        <embed name="GoodEnough" src="music.mp3" loop="false" hidden="true" autostart="true">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <div class="sentence1"> In 1978 I released the first record which described itself as Ambient Music,
      a name I invented to describe an emerging musical style </div>
