lots of changes
hopefully this works

--- a/Project2/index.html
+++ b/Project2/index.html
@@ -16,6 +16,9 @@
 
        <embed name="GoodEnough" src="music.mp3" loop="false" hidden="true" autostart="true">
 
+    <div class="box">
+
+
     <div class="sentence1"> In 1978 I released the first record which described itself as Ambient Music,
      a name I invented to describe an emerging musical style </div>
     <div class="sentence2"> It happened like this. </div>
@@ -112,6 +115,63 @@
     <div class="sentence79"> people who use • music while they work and want to make for themselves a conducive environment </div>
     <div class="sentence80"> who’ve first enjoyed and encouraged this work.) </div>
     <div class="sentence81"> In late 1977 I was waiting for a plane in Cologne airport .</div>
+    <div class="sentence82"> designed, I believe, by the father of one of the founders of Kraftwerk) was very attractive</div>
+    <div class="sentence83"> I thought, ‘ It has to be interruptible </div>
+    <div class="sentence84"> (because there’ll be announcements), it has to work outside the frequencies at which people speak,</div>
+    <div class="sentence85"> and at different speeds from speech patterns (so as not to confuse communication),</div>
+    <div class="sentence86"> and it has to be able to accommodate all the noises that airports produce.</div>
+    <div class="sentence87"> And, most importantly for me, it has to have something to do with where you are and what you’re there for</div>
+    <div class="sentence88"> flying, floating and, secretly, flirting with death.’ I thought,</div>
+    <div class="sentence89"> ‘I want to make a kind of music that prepares you for dying</div>
+    <div class="sentence90">  that doesn’t get all bright and cheerful and pretend you’re not a little apprehensive, </div>
+
+   <div class="sentence91"> but which makes you say to yourself, “Actually, it’s not that big a deal if I die.”’ </div>
+    <div class="sentence92"> Thus was born the first Ambient record — Music for Airports — </div>
+    <div class="sentence93"> which I released on my own label (called Ambient Records, of course). </div>
+    <div class="sentence94"> The Inner sleeve of that release carried my manifesto:</div>
+    <div class="sentence95"> The concept of music designed specifically as a background feature in the environment</div>
+    <div class="sentence96">  was pioneered by Muzak Inc. in the fifties,</div>
+    <div class="sentence97"> and has since come carries are those particularly associated with the kind of material that Muzal Inc. produces</div>
+    <div class="sentence98"> familiar tunes arranged and orchestrated in a lightweight and derivative manner. </div>
+    <div class="sentence99"> Understandably, this has led most discerning listeners</div>
+    <div class="sentence100"> and most composers) to dismiss entirely the concept of environmental music as an idea worthy of attention.</div>
+    <div class="sentence101"> Over the past three years, I have become interested in the use of music as ambience, </div>
+    <div class="sentence102">  and have come to believe that it is possible to produce material</div>
+    <div class="sentence103"> that can be used thus without being in any way compromised.</div>
+    <div class="sentence104"> To create a distinction between my own experiments in this area and the products </div>
+    <div class="sentence105"> of the various purveyors of canned music, I have begun using the term Ambient Music.</div>
+    <div class="sentence106"> An ambience is defined as an atmosphere, or a surrounding influence: a tint.</div>
+    <div class="sentence107"> My intention is to produce original pieces ostensibly</div>
+    <div class="sentence108"> (but not exclusively) for particular times and situations with a view </div>
+    <div class="sentence109">  to building up a small but versatile catalogue of environmental music </div>
+    <div class="sentence110"> suited to a wide variety of moods and atmospheres.</div>
+    <div class="sentence111"> Whereas the extant canned-music companies proceed from the basis of regularizing environments</div>
+    <div class="sentence112"> by blanketing their acoustic and atmospheric idiosyncrasies,</div>
+    <div class="sentence113"> Ambient Music is intended to enhance these.</div>
+    <div class="sentence114"> Whereas conventional background music is produced by stripping away all sense</div>
+    <div class="sentence115"> of doubt and uncertainty (and thus all genuine interest) from the music,</div>
+    <div class="sentence116"> Ambient Music retains these qualities.</div>
+    <div class="sentence117"> And whereas their intention is to ‘brighten’ the environment by adding stimulus to it</div>
+    <div class="sentence118"> (thus supposedly alleviating the tedium of routine tasks and </div>
+    <div class="sentence119">levelling out the natural ups and downs of the body rhythms), </div>
+    <div class="sentence120"> Ambient Music is intended to induce calm and a spaa to think.</div>
+    <div class="sentence121"> Ambient Music must be able to accommodate many levels of listening attention</div>
+    <div class="sentence122">without enforcing one in particular;  </div>
+    <div class="sentence123">  it must be as ignorable as it is interesting.(September 1978)</div>
+    <div class="sentence124"> Like a lot of the stuff I was doing at the time,</div>
+    <div class="sentence125"> this was regarded by many English music critics as a kind of arty joke,</div>
+    <div class="sentence126"> they had a lot of fun with it. </div>
+    <div class="sentence127"> I’m therefore pleased that the idea has stuck around so long  </div>
+    <div class="sentence128"> and keeps sprouting off in all sorts of directions:</div>
+    <div class="sentence129">  it comes back around to me like Chinese Whispers</div>
+    <div class="sentence130"> unrecognizable but intriguing.</div>
+    <div class="sentence131"> Those early seeds (there were only four releases on the original Ambient Records label</div>
+    <div class="sentence132"> On Land and Music for Airports by me, </div>
+    <div class="sentence133"> The Plateaux of Mirror by Harold Budd, and Day of Radiance by Laraaji)</div>
+    <div class="sentence134"> have contributed to a rich forest of music.1996) </div>
+
+  </div>
+
 
   <!--  <script>
     var x = document.getElementById("myAudio");
