--- a/index.html
+++ b/index.html
@@ -6,10 +6,38 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1> Georgia's Website </h1>
-    <p> This is my page on GitHub </p>
-    <a href="project1.html"> Project 1 </a> <br> </br>
-    <a href="Project2/homepage.html"> Project 2 draft </a>
+    <h1> Georgia Malone </h1>
+    <h2> Core 2: Interaction <h2>
+    <h3> Studio: Projects </h3>
+      <ul> <a href="project1.html"> P1: Cross-Platform Storytelling </a> </ul>
+      <ul> <a href="Project2/homepage.html"> P2: Stories as Networks </a> </ul>
+      <ul> <a href="Project3/project1.html">P3: Elastic Collections </a> </ul>
+      <ul> <a href="Project4/project1.html">P4: Input/Output </a> </ul>
+    <h3> Studio Workshops </h3>
+       <ul> <a href="Avatar/project1.html">Slack Avatar </a> </ul>
+       <ul> <a href="Screentime/project1.html">Screen Time </a> </ul>
+       <ul> <a href="Screenshot/project1.html">Screenshot Portrait </a> </ul>
+       <ul> <a href="Handmade/project1.html">Handmade Code </a> </ul>
+       <ul> <a href="Typestudy/project1.html">Interaction & Type Study </a> </ul>
+       <ul> <a href="Hover/project1.html">Hover States </a> </ul>
+     <h3> Lab Assignments </h3>
+       <ul> <a href="A1/project1.html">Assignment #1: GitHub Homepage (Files, Folders, GitHub) </a> </ul>
+       <ul> <a href="A2/project1.html">Assignment #2: Create a Community Agreements Web Ring (HTML) </a> </ul>
+       <ul> <a href="A3/project1.html">Assignment #3: Responsive Exquisite Corpse (HTML, CSS, Responsive) </a> </ul>
+       <ul> <a href="A4/project1.html">Assignment #4: Webpage Story (HTML, CSS) </a> </ul>
+       <ul> <a href="A5/project1.html">Assignment #5: 15 Variations (HTML, CSS, Layout) </a> </ul>
+       <ul> <a href="A6/project1.html">Assignment #6: Collaborative Digital Zine (Homepage) (HTML, CSS, Advanced) </a> </ul>
+       <ul> <a href="A7/project1.html">Assignment #7: TBA (JS Intro) </a> </ul>
+       <ul> <a href="A8/project1.html">Assignment #8: Set the Airtable (dinner table), Part I (JS, DOM, API) </a> </ul>
+       <ul> <a href="A9/project1.html">Assignment #9: Set the Airtable (dinner table), Part II (JS, EVENTS, API) </a> </ul>
+       <ul> <a href="A10/project1.html">Assignment #10: Technical Reflection Page 1 </a> </ul>
+       <ul> <a href="A11/project1.html">Assignment #11: Technical Reflection Page 2 </a> </ul>
+     <h3> Lab Workshops </h3>
+        <ul> <a href="Hack/project1.html">Hack The Homepage </a> </ul>
+        <ul> <a href="Communtiy/project1.html">community/agreements/workshop.html </a> </ul>
+        <ul> <a href="Cookbook/project1.html">Class Cookbook </a> </ul>
+        <ul> <a href="Responsive/project1.html">Responsive Web Page </a> </ul>
+
   </body>
 
 
