--- a/Project 2/homepage.html
+++ b/Project 2/homepage.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="title">
     <a href="index.html"> Ambient<br/>Music</a>
     <h2> By Brian Eno </h2>
+
     </div>
 
 
