--- a/Project2/index.html
+++ b/Project2/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
 
+    <audio controls>
+  <source src="music.mp3" type="audio/mpeg">
+  </audio>
 
     <embed name="GoodEnough" src="music.mp3" loop="false" hidden="true" autostart="true">
 
