--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
        <ul> <a href="Handmade/project1.html">Handmade Code </a> </ul>
        <ul> <a href="Typestudy/project1.html">Interaction & Type Study </a> </ul>
        <ul> <a href="Hover/project1.html">Hover States </a> </ul>
+       <ul> <a href="Flexbox/index.html"> Flexbox Calender </a> </ul>
      <h3> Lab Assignments </h3>
        <ul> <a href="A1/project1.html">Assignment #1: GitHub Homepage (Files, Folders, GitHub) </a> </ul>
        <ul> <a href="A2/project1.html">Assignment #2: Create a Community Agreements Web Ring (HTML) </a> </ul>
