so many changes

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
       <ul> <a href="Project3/project1.html">P3: Elastic Collections </a> </ul>
       <ul> <a href="Project4/project1.html">P4: Input/Output </a> </ul>
     <h3> Studio Workshops </h3>
-       <ul> <a href="Avatar/project1.html">Slack Avatar </a> </ul>
-       <ul> <a href="Screentime/project1.html">Screen Time </a> </ul>
-       <ul> <a href="Screenshot/project1.html">Screenshot Portrait </a> </ul>
-       <ul> <a href="Handmade/project1.html">Handmade Code </a> </ul>
+       <ul> <a href="slackavatar/index.html">Slack Avatar </a> </ul>
+       <ul> <a href="Screentime/index.html">Screen Time </a> </ul>
+       <ul> <a href="Screenshot/index.html">Screenshot Portrait </a> </ul>
+       <ul> <a href="https://drive.google.com/drive/folders/1yA_wGADoGlyJCOJiAYzq3KkW1U0uw_UW">Handmade Code </a> </ul>
        <ul> <a href="Typestudy/project1.html">Interaction & Type Study </a> </ul>
        <ul> <a href="Hover/project1.html">Hover States </a> </ul>
+       <ul> <li> <a href="hover/hover1/index.html"> Hover 1 </a> </li>
+           <li> <a href="hover/hover2/index.html"> Hover 2</a> </li>
+           <li> <a href="hover/hover3/index.html">Hover 3 </a> </li>
+           <li> <a href="hover/hover4/index.html"> Hover 4</a> </li>
+           <li> <a href="hover/hover5/index.html"> Hover 5</a> </li> </ul>
        <ul> <a href="Flexbox/index.html"> Flexbox Calender </a> </ul>
      <h3> Lab Assignments </h3>
        <ul> <a href="A1/project1.html">Assignment #1: GitHub Homepage (Files, Folders, GitHub) </a> </ul>
