--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul> <a href="Project4/project1.html">P4: Input/Output </a> </ul>
     <h3> Studio Workshops </h3>
        <ul> <a href="slackavatar/index.html">Slack Avatar </a> </ul>
-       <ul> <a href="Screentime/index.html">Screen Time </a> </ul>
+       <ul> <a href="screentime/index.html">Screen Time </a> </ul>
        <ul> <a href="Screenshot/index.html">Screenshot Portrait </a> </ul>
        <ul> <a href="https://drive.google.com/drive/folders/1yA_wGADoGlyJCOJiAYzq3KkW1U0uw_UW">Handmade Code </a> </ul>
        <ul> <a href="Typestudy/project1.html">Interaction & Type Study </a> </ul>
