--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3> Studio Workshops </h3>
        <ul> <a href="slackavatar/index.html">Slack Avatar </a> </ul>
        <ul> <a href="screentime/index.html">Screen Time </a> </ul>
-       <ul> <a href="Screenshot/index.html">Screenshot Portrait </a> </ul>
+       <ul> <a href="screenshot/index.html">Screenshot Portrait </a> </ul>
        <ul> <a href="https://drive.google.com/drive/folders/1yA_wGADoGlyJCOJiAYzq3KkW1U0uw_UW">Handmade Code </a> </ul>
        <ul> <a href="Typestudy/project1.html">Interaction & Type Study </a> </ul>
        <ul> <a href="Hover/project1.html">Hover States </a> </ul>
