--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <h3> Lab Workshops </h3>
         <ul> <a href="Hack/project1.html">Hack The Homepage </a> </ul>
         <ul> <a href="Communtiy/project1.html">community/agreements/workshop.html </a> </ul>
-        <ul> <a href="Cookbook/project1.html">Class Cookbook </a> </ul>
+        <ul> <a href="Recipe/index.html">Class Cookbook </a> </ul>
         <ul> <a href="Responsive/project1.html">Responsive Web Page </a> </ul>
 
   </body>
