--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        <ul> <a href="A11/project1.html">Assignment #11: Technical Reflection Page 2 </a> </ul>
      <h3> Lab Workshops </h3>
         <ul> <a href="Hack/project1.html">Hack The Homepage </a> </ul>
-        <ul> <a href="Communtiy/project1.html">community/agreements/workshop.html </a> </ul>
+        <ul> <a href="be-encouraging/to-others/and-yourself/index.html">community/agreements/workshop.html </a> </ul>
         <ul> <a href="Recipe/index.html">Class Cookbook </a> </ul>
         <ul> <a href="Responsive/project1.html">Responsive Web Page </a> </ul>
 
