--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Georgia 2021 Core Interaction </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    
     <h1> Georgia Malone </h1>
     <h2> Core 2: Interaction <h2>
     <h3> Studio: Projects </h3>
