--- a/be-encouraging/index.html
+++ b/be-encouraging/index.html
@@ -7,8 +7,13 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
 
   <body>
+    <div class="everything">
     <h1> Community Agreements </h1>
     <h2> Be Encouraging to others and yourself </h2>
   <ul>
@@ -26,6 +31,7 @@
   <li>remember that improvement is something to be proud of</li>
   <li>practice mindful listening, dont plan what to say when someone else is speaking be an active listener</li>
   </ul>
+</div> 
   </body>
 
 </html>
