--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+
     <h1> Georgia Malone </h1>
     <h2> Core 2: Interaction <h2>
     <h3> Studio: Projects </h3>
@@ -29,7 +29,7 @@
        <ul> <a href="Flexbox/index.html"> Flexbox Calender </a> </ul>
      <h3> Lab Assignments </h3>
        <ul> <a href="A1/project1.html">Assignment #1: GitHub Homepage (Files, Folders, GitHub) </a> </ul>
-       <ul> <a href="A2/project1.html">Assignment #2: Create a Community Agreements Web Ring (HTML) </a> </ul>
+       <ul> <a href="be-encouraging/index.html">Assignment #2: Create a Community Agreements Web Ring (HTML) </a> </ul>
        <ul> <a href="A3/project1.html">Assignment #3: Responsive Exquisite Corpse (HTML, CSS, Responsive) </a> </ul>
        <ul> <a href="A4/project1.html">Assignment #4: Webpage Story (HTML, CSS) </a> </ul>
        <ul> <a href="A5/project1.html">Assignment #5: 15 Variations (HTML, CSS, Layout) </a> </ul>
