lots of changes

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
            <li> <a href="hover/hover5/index.html"> Hover 5</a> </li> </ul>
        <ul> <a href="Flexbox/index.html"> Flexbox Calender </a> </ul>
      <h3> Lab Assignments </h3>
-       <ul> <a href="A1/project1.html">Assignment #1: GitHub Homepage (Files, Folders, GitHub) </a> </ul>
+       <ul> <a href="index.html">Assignment #1: GitHub Homepage (Files, Folders, GitHub) </a> </ul>
        <ul> <a href="be-encouraging/index.html">Assignment #2: Create a Community Agreements Web Ring (HTML) </a> </ul>
-       <ul> <a href="A3/project1.html">Assignment #3: Responsive Exquisite Corpse (HTML, CSS, Responsive) </a> </ul>
-       <ul> <a href="A4/project1.html">Assignment #4: Webpage Story (HTML, CSS) </a> </ul>
+       <ul> <a href="webtour/basic.html">Assignment #3: Responsive Exquisite Corpse (HTML, CSS, Responsive) </a> </ul>
+       <ul> <a href="webtour/homepage.html">Assignment #4: Webpage Story (HTML) </a> </ul>
+       <ul> <a href="webtour/homepage.html">Assignment #4: Webpage Story (CSS) </a> </ul>
        <ul> <a href="A5/project1.html">Assignment #5: 15 Variations (HTML, CSS, Layout) </a> </ul>
        <ul> <a href="A6/project1.html">Assignment #6: Collaborative Digital Zine (Homepage) (HTML, CSS, Advanced) </a> </ul>
        <ul> <a href="A7/project1.html">Assignment #7: TBA (JS Intro) </a> </ul>
