--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Responsive </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
  </head>
 <body>
 <div class="text">
