--- a/index.html
+++ b/index.html
@@ -28,22 +28,21 @@
            <li> <a href="hover/hover5/index.html"> Hover 5</a> </li> </ul>
        <ul> <a href="Flexbox/index.html"> Flexbox Calender </a> </ul>
      <h3> Lab Assignments </h3>
-       <ul> <a href="index.html">Assignment #1: GitHub Homepage (Files, Folders, GitHub) </a> </ul>
-       <ul> <a href="be-encouraging/index.html">Assignment #2: Create a Community Agreements Web Ring (HTML) </a> </ul>
-       <ul> <a href="webtour/basic.html">Assignment #3: Responsive Exquisite Corpse (HTML, CSS, Responsive) </a> </ul>
-       <ul> <a href="webtour/homepage.html">Assignment #4: Webpage Story (HTML) </a> </ul>
-       <ul> <a href="webtour/homepage.html">Assignment #4: Webpage Story (CSS) </a> </ul>
-       <ul> <a href="A5/project1.html">Assignment #5: 15 Variations (HTML, CSS, Layout) </a> </ul>
-       <ul> <a href="A6/project1.html">Assignment #6: Collaborative Digital Zine (Homepage) (HTML, CSS, Advanced) </a> </ul>
-       <ul> <a href="A7/project1.html">Assignment #7: TBA (JS Intro) </a> </ul>
-       <ul> <a href="A8/project1.html">Assignment #8: Set the Airtable (dinner table), Part I (JS, DOM, API) </a> </ul>
-       <ul> <a href="A9/project1.html">Assignment #9: Set the Airtable (dinner table), Part II (JS, EVENTS, API) </a> </ul>
-       <ul> <a href="A10/project1.html">Assignment #10: Technical Reflection Page 1 </a> </ul>
-       <ul> <a href="A11/project1.html">Assignment #11: Technical Reflection Page 2 </a> </ul>
+       <ul> <a href="index.html">Assignment #1: Review Page </a> </ul>
+       <ul> <a href="be-encouraging/index.html">Assignment #2: Web Ring </a> </ul>
+       <ul> <a href="webtour/basic.html">Assignment #3: Link to class homepage Collaborative Zine </a> </ul>
+       <ul> <a href="html/homepagec.html">Assignment #4: Webtour Part 1 (HTML) </a> </ul>
+       <ul> <a href="webtour/homepage.html">Assignment #5: Webtour Part 2 (CSS) </a> </ul>
+       <ul> <a href="A5/project1.html">Assignment #6: Webtour Part 3 (JS) </a> </ul>
+       <ul> <a href="A7/project1.html">Assignment #7: Look on slack </a> </ul>
+       <ul> <a href="A8/project1.html">Assignment #8: Airtable, Part 1 </a> </ul>
+       <ul> <a href="A9/project1.html">Assignment #9: Airtable, Part 2  </a> </ul>
+       <ul> <a href="A10/project1.html">Assignment #10: Technical Reflection 1 </a> </ul>
+       <ul> <a href="A11/project1.html">Assignment #11: Technical Reflection 2 </a> </ul>
      <h3> Lab Workshops </h3>
         <ul> <a href="Hack/project1.html">Hack The Homepage </a> </ul>
-        <ul> <a href="be-encouraging/to-others/and-yourself/index.html">community/agreements/workshop.html </a> </ul>
-        <ul> <a href="Recipe/index.html">Class Cookbook </a> </ul>
+        <ul> <a href="be-encouraging/index.html">community/agreements/workshop.html </a> </ul>
+        <ul> <a href="recipe/index.html">Class Cookbook </a> </ul>
         <ul> <a href="Responsive/project1.html">Responsive Web Page </a> </ul>
 
   </body>
