--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <h3> Lab Assignments </h3>
        <ul> <a href="index.html">Assignment #1: Review Page </a> </ul>
        <ul> <a href="be-encouraging/index.html">Assignment #2: Web Ring </a> </ul>
-       <ul> <a href="webtour/basic.html">Assignment #3: Link to class homepage Collaborative Zine </a> </ul>
+       <ul> <a href="https://rejuvenatethe.net/core-interaction-spring-2021.html#home">Assignment #3: Link to class homepage Collaborative Zine </a> </ul>
        <ul> <a href="html/homepagec.html">Assignment #4: Webtour Part 1 (HTML) </a> </ul>
        <ul> <a href="webtour/homepage.html">Assignment #5: Webtour Part 2 (CSS) </a> </ul>
        <ul> <a href="A5/project1.html">Assignment #6: Webtour Part 3 (JS) </a> </ul>
