--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3> Studio: Projects </h3>
       <ul> <a href="project1.html"> P1: Cross-Platform Storytelling </a> </ul>
       <ul> <a href="Project2/homepage.html"> P2: Stories as Networks </a> </ul>
-      <ul> <a href="Project3/prayer.html">P3: Elastic Collections </a> </ul>
+      <ul> <a href="project3/prayer.html">P3: Elastic Collections </a> </ul>
       <ul> <a href="https://www.figma.com/file/wUU4tRgI0yYUUcBPqIJzGt/Input-Output-Ideas?node-id=1%3A2">P4: Input/Output </a> </ul>
     <h3> Studio Workshops </h3>
        <ul> <a href="slackavatar/index.html">Slack Avatar </a> </ul>
