--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
            <li> <a href="hover/hover4/index.html"> Hover 4</a> </li>
            <li> <a href="hover/hover5/index.html"> Hover 5</a> </li> </ul>
        <ul> <a href="Flexbox/index.html"> Flexbox Calender </a> </ul>
+       <ul> <a href="textgenerator.html"> Text Generator </a> </ul>
      <h3> Lab Assignments </h3>
        <ul> <a href="index.html">Assignment #1: Review Page </a> </ul>
        <ul> <a href="be-encouraging/index.html">Assignment #2: Web Ring </a> </ul>
