--- a/project3/prayer.html
+++ b/project3/prayer.html
@@ -20,16 +20,16 @@
     <span class="close">&times;</span>
     <div class="title"> Folded Hands </div>
     <ul class="flex-container">
-      <li class="flex-item"><img src="images/prayer/apple.png"></li>
-      <li class="flex-item"><img src="images/prayer/emojidex.png"></li>
-      <li class="flex-item"><img src="images/prayer/fb.png"></li>
-      <li class="flex-item"><img src="images/prayer/google.png"></li>
-      <li class="flex-item"><img src="images/prayer/joypixels.png"></li>
-      <li class="flex-item"><img src="images/prayer/microsoft.png"></li>
-      <li class="flex-item"><img src="images/prayer/openmoji.png"></li>
-      <li class="flex-item"><img src="images/prayer/samsung.png"></li>
-      <li class="flex-item"><img src="images/prayer/twitter.png"></li>
-      <li class="flex-item"><img src="images/prayer/whatsapp.png"></li>
+      <li class="flex-item" id="apple"><img src="images/prayer/apple.png"></li>
+      <li class="flex-item" id="emojidex"><img src="images/prayer/emojidex.png"></li>
+      <li class="flex-item" id="fb"><img src="images/prayer/fb.png"></li>
+      <li class="flex-item" id="google"><img src="images/prayer/google.png"></li>
+      <li class="flex-item" id="joypixels"><img src="images/prayer/joypixels.png"></li>
+      <li class="flex-item" id="microsoft"><img src="images/prayer/microsoft.png"></li>
+      <li class="flex-item" id="openmoji"><img src="images/prayer/openmoji.png"></li>
+      <li class="flex-item" id="samsung"><img src="images/prayer/samsung.png"></li>
+      <li class="flex-item" id="twitter"><img src="images/prayer/twitter.png"></li>
+      <li class="flex-item" id="whatsapp"><img src="images/prayer/whatsapp.png"></li>
 
     </ul>
 
@@ -38,7 +38,7 @@
 Rarely: a high-five.
 A previous version of this emoji displayed a yellow burst of light behind the two hands on iOS. Android once showed a blob-character with closed eyes and folded hands.
     </div>
-    <div class="program"> Apple <br> </br>
+    <div class="program" id="program"> Apple <br> </br>
 Emojis displayed on iPhone, iPad, Mac, Apple Watch and Apple TV use the Apple Color Emoji font installed on iOS, macOS, watchOS and tvOS. Some Apple devices support Animoji and Memoji. Two Private Use Area characters are not cross-platform compatible but do work on Apple devices.
     <ul>
     <li> Vendor: Apple </li>
@@ -77,6 +77,7 @@ window.onclick = function(event) {
   }
 }
 </script>
+<script src="prayer.js"> </script> 
 
 
   </body>
