--- a/webtour/homepage.html
+++ b/webtour/homepage.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="content">
-    <h1> WELCOME TO BRIGHTON! </h1>
+    <h1 class="ml2"> WELCOME TO BRIGHTON! </h1>
     <a href="index.html"> Explore </a>
     <br> </br>
     <br> </br>
@@ -18,6 +18,7 @@
 
 
     <!-- <img src="brighton/brighton.jpg"> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     </div>
   </body>
 </html>
