--- a/project3/stars.html
+++ b/project3/stars.html
@@ -26,7 +26,7 @@
     <ul class="flex-container">
       <li class="flex-item" id="apple"><img src="images/stars/apple.png"></li>
       <li class="flex-item" id="emojidex"><img src="images/stars/emojidex.png"></li>
-      <li class="flex-item" id="fb"><img src="images/stars/fb.png"></li>
+      <li class="flex-item" id="fb"><img src="images/stars/FB.png"></li>
       <li class="flex-item" id="google"><img src="images/stars/google.png"></li>
       <li class="flex-item" id="joypixels"><img src="images/stars/joypixels.png"></li>
       <li class="flex-item" id="microsoft"><img src="images/stars/microsoft.png"></li>
