--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
        <ul> <a href="A7/project1.html">Assignment #7: Look on slack </a> </ul>
        <ul> <a href="A8/project1.html">Assignment #8: Airtable, Part 1 </a> </ul>
        <ul> <a href="A9/project1.html">Assignment #9: Airtable, Part 2  </a> </ul>
-       <ul> <a href="A10/project1.html">Assignment #10: Technical Reflection 1 </a> </ul>
-       <ul> <a href="A11/project1.html">Assignment #11: Technical Reflection 2 </a> </ul>
+       <ul> <a href="project4/daytime.js">Assignment #10: Technical Reflection 1 </a> </ul>
      <h3> Lab Workshops </h3>
         <ul> <a href="Hack/project1.html">Hack The Homepage </a> </ul>
         <ul> <a href="be-encouraging/index.html">community/agreements/workshop.html </a> </ul>
