--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul> <a href="Hack/project1.html">Hack The Homepage </a> </ul>
         <ul> <a href="be-encouraging/index.html">community/agreements/workshop.html </a> </ul>
         <ul> <a href="recipe/index.html">Class Cookbook </a> </ul>
-        <ul> <a href="Responsive/project1.html">Responsive Web Page </a> </ul>
+        <ul> <a href="response2/responsive.html">Responsive Web Page </a> </ul>
 
   </body>
 
